--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,7 @@
 steps:
 - name: 'gcr.io/cloud-builders/go'
+  args: ['build']
+- name: 'gcr.io/cloud-builders/go'
   args: ['test']
 - name: 'gcr.io/cloud-builders/go'
   args: ['build']
