--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,6 +7,6 @@ steps:
   args: ['build', '-t', 'gcr.io/$PROJECT_ID/gcb-docker-compose:latest', '.']
 - name: 'docker/compose:1.15.0'
   args: ['up', '-d']
-  env:go run main.go
+  env:
   - 'PROJECT_ID=$PROJECT_ID'
 images: ['gcr.io/$PROJECT_ID/gcb-docker-compose:latest']
