--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,6 @@
 steps:
 - name: 'gcr.io/cloud-builders/go'
-  args: ['build']
+  args: ['build', 'hello']
 - name: 'gcr.io/cloud-builders/go'
   args: ['test']
 - name: 'gcr.io/cloud-builders/docker'
