added web handler

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,6 +1,10 @@
 steps:
 - name: 'gcr.io/cloud-builders/go'
+  args: ['install', '.']
+  env: ['PROJECT_ROOT=hello']
+- name: 'gcr.io/cloud-builders/go'
   args: ['build', 'hello']
+  env: ['PROJECT_ROOT=hello']
 - name: 'gcr.io/cloud-builders/go'
   args: ['test']
 - name: 'gcr.io/cloud-builders/docker'
