--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,12 +16,12 @@ steps:
   args:
   - 'build'
   - '-t'
-  - 'gcr.io/$PROJECT_ID/hello-go-cloud::$SHORT_SHA'
+  - 'gcr.io/$PROJECT_ID/hello-go-cloud:$SHORT_SHA'
   - '.'
 - name: 'gcr.io/cloud-builders/docker'
   id: Push
   args:
   - 'push'
-  - 'gcr.io/$PROJECT_ID/hello-go-cloud::$SHORT_SHA'
+  - 'gcr.io/$PROJECT_ID/hello-go-cloud:$SHORT_SHA'
   env:
   - 'PROJECT_ID=$PROJECT_ID'
