--- a/ci/build.go.yml
+++ b/ci/build.go.yml
@@ -20,8 +20,7 @@ run:
     - |
       export DEFAULT_DIR=$(pwd)
       echo "test repo ..."
-      ls artifacts
-      ls repo
+      cd repo
       go test
       go build -o hw
       mv hw $DEFAULT_DIR/artifacts
