--- a/devhub/Dockerfile
+++ b/devhub/Dockerfile
@@ -1,4 +1,5 @@
 FROM golang:1.14-stretch
-COPY target/helloworld .
-RUN chmod +x helloworld
-CMD helloworld
+RUN mkdir /target/
+COPY target/helloworld /target/helloworld
+RUN chmod +x /target/helloworld
+CMD /target/helloworld
