--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -9,7 +9,7 @@ env:
   CLUSTER_RESOURCE_GROUP: myResourceGroup
   NAMESPACE: default
   SECRET: mou
-  APP_NAME: PORT
+  APP_NAME: helloworld
   
 jobs:
   build:
