--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -16,6 +16,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@main
+    - uses: actions/setup-go@v2
+      with:
+	go-version: '^1.13.1' # The Go version to download (if necessary) and use.
+    - run: |
+	go test
+	go build -o ${{ env.APP_NAME }}
     
     # Connect to Azure Container Registry (ACR)
     - uses: azure/docker-login@v1
