--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -52,6 +52,11 @@ jobs:
         secret-name: ${{ env.SECRET }}
         namespace: ${{ env.NAMESPACE }}
         arguments: --force true
+
+    # FIXME
+    - run: |
+        pwd
+        ls -lh
     
     # Deploy app to AKS
     - uses: azure/k8s-deploy@v1
