--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -53,19 +53,13 @@ jobs:
         namespace: ${{ env.NAMESPACE }}
         arguments: --force true
 
-    # FIXME
-    - run: |
-        pwd
-        ls -lh
-    
     # Deploy app to AKS
     - uses: azure/k8s-deploy@v1
       with:
         manifests: |
           ${{ github.workspace }}/manifests/deployment.yaml
           ${{ github.workspace }}/manifests/service.yaml
-        images: |
-          ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
+        images: ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
         imagepullsecrets: |
           ${{ env.SECRET }}
         namespace: ${{ env.NAMESPACE }}
