--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -16,6 +16,7 @@ spec:
         "kubernetes.io/os": linux
       containers:
       - name: helloworld
+        image: 
         resources:
           requests:
             cpu: 100m
