--- a/.github/workflows/helloworld.yml
+++ b/.github/workflows/helloworld.yml
@@ -62,6 +62,7 @@ jobs:
       with:
         manifests: |
           ${{ github.workspace }}/manifests/deployment.yaml
+          ${{ github.workspace }}/manifests/hpa.yaml
           ${{ github.workspace }}/manifests/service.yaml
         images: ${{ env.REGISTRY_NAME }}.azurecr.io/${{ env.APP_NAME }}:${{ github.sha }}
         imagepullsecrets: |
