--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -1,13 +1,16 @@
-# This workflow will build a golang project
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-go
-
 name: Go
 
 on:
-  push:
-    branches: [ "master" ]
-  pull_request:
-    branches: [ "master" ]
+  workflow_dispatch:
+    inputs:
+      goversion:
+        description: 'Go Versions'
+        required: true
+        type: choice
+        options:
+        - "1.18"
+        - "1.19"
+        - "1.20"
 
 jobs:
 
@@ -19,10 +22,9 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
-        go-version: 1.18
+        go-version: ${{ inputs.goversion}}
 
     - name: Build
       run: go build -v ./...
 
-    - name: Test
-      run: go test -v ./...
+
