dump /home files

--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -25,4 +25,7 @@ jobs:
       #     find /github -print
       - name: Action dump
         uses: swashbuck1r/docker-action-dump@v1
+      - name: Dump /home files
+        run: |
+          find /home -print
       - run: echo "🍏 This job's status is ${{ job.status }}."
