--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -27,7 +27,7 @@ jobs:
         run: |-
           echo myOutput=myOutputValue >> $GITHUB_OUTPUT
           echo MYENV=myEnvValue >> $GITHUB_ENV
-          echo "$HOME/.local/bin" >> $GITHUB_PATH
+          echo "$HOME/.custom-path/bin" >> $GITHUB_PATH
           echo "example_1 Added some variables" >> $GITHUB_STEP_SUMMARY
       - name: Dump environment2
         run: |
