--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -34,6 +34,8 @@ jobs:
           env | sort
       - name: Action dump
         uses: swashbuck1r/docker-action-dump@v1
+        with:
+          go-version: "1.18"
       - name: Dump /home files
         run: |
           ls -al /home
