--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -44,7 +44,11 @@ jobs:
         run: echo "hello goo" > /tmp/goo
       - name: List /tmp/goo file
         run: ls -al /tmp/goo
-      - name: OS Architecture
-        image: bash:alpine3.16
-        run: uname -a
       - run: echo "🍏 This job's status is ${{ job.status }}."
+  Container-job:
+    runs-on: ubuntu-latest
+    container:
+      image: bash:alpine3.16
+    steps:
+      - name: OS Architecture
+        run: uname -a
